--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
   <meta name="author" content="Team ChoCo" />
   <meta name="keywords" content="티처캔, 초등교사, 팀초코, 초등학교, 교사, 학교" />
   <meta name="description" content="선생님들의 수업과 업무 도우미" />
+  <meta property="og:title" content="티처캔">
+  <meta property="og:description" content="선생님들의 수업과 업무 도우미">
+  <meta property="og:image" content="%PUBLIC_URL%/logo192.png">
+  <meta property="og:url" content="https://www.teachercan.com">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
