--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,14 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+  <link rel="canonical" href="https://www.teachercan.com">
+  <meta name="robots" content="index,follow">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="author" content="Team ChoCo" />
   <meta name="keywords" content="티처캔, 초등교사, 팀초코, 초등학교, 교사, 학교" />
   <meta name="description" content="선생님들의 수업과 업무 도우미" />
+  <meta property="og:type" content="website">
   <meta property="og:title" content="티처캔">
   <meta property="og:description" content="선생님들의 수업과 업무 도우미">
   <meta property="og:image" content="%PUBLIC_URL%/logo192.png">
