connect google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,48 @@
 <!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+    <link rel="canonical" href="https://www.teachercan.com" />
+    <meta name="robots" content="index,follow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Team ChoCo" />
+    <meta
+      name="keywords"
+      content="티처캔, 초등교사, 팀초코, 초등학교, 교사, 학교"
+    />
+    <meta name="description" content="선생님들의 수업과 업무 도우미" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="티처캔" />
+    <meta property="og:description" content="선생님들의 수업과 업무 도우미" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:url" content="https://www.teachercan.com" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-S8NFTJX5PZ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
-  <link rel="canonical" href="https://www.teachercan.com">
-  <meta name="robots" content="index,follow">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="author" content="Team ChoCo" />
-  <meta name="keywords" content="티처캔, 초등교사, 팀초코, 초등학교, 교사, 학교" />
-  <meta name="description" content="선생님들의 수업과 업무 도우미" />
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="티처캔">
-  <meta property="og:description" content="선생님들의 수업과 업무 도우미">
-  <meta property="og:image" content="%PUBLIC_URL%/logo192.png">
-  <meta property="og:url" content="https://www.teachercan.com">
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-  <style>
-    @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap");
-  </style>
-  <title>티처캔</title>
-</head>
+      gtag("config", "G-S8NFTJX5PZ");
+    </script>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap");
+    </style>
+    <title>티처캔</title>
+  </head>
 
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-</body>
-
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
