--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,10 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap");
     </style>
+    <link href="https://fonts.googleapis.com/css?family=Black+Han+Sans:400" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Black+And+White+Picture:400" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=East+Sea+Dokdo:400" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Song+Myung:400" rel="stylesheet" />
     <title>티처캔</title>
   </head>
   <body>
